fix subsets with right dfs and add dp approach to it